fixed borders on ios devices

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -584,6 +584,7 @@ table#tour_dates tr:first-child,table#tour_dates tr:last-child {
 	color: #666;
 	float: left;
 	width: 35%;
+	border-radius: 0;
 }
 
 .form_input input[type=submit] {
@@ -596,6 +597,7 @@ table#tour_dates tr:first-child,table#tour_dates tr:last-child {
 	width: 19%;
 	margin: 10px 0 0 85px;
 	-webkit-appearance: none;
+	border-radius: 0;
 }
 
 .form_input input#experience,.form_input input#genre,.form_input input#question {
